--- a/app/src/main/res/layout/activity_farmer_request_pickup_enter_payment.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_enter_payment.xml
@@ -28,79 +28,137 @@ tools:context="com.example.wagner.avocado.FarmerRequestPickupEnterPayment">
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    <!--
+     <TableLayout
+         android:id="@+id/tableLayout"
+         android:layout_width="match_parent"
+         android:layout_height="237dp"
+         android:layout_marginTop="164dp"
+         app:layout_constraintTop_toTopOf="parent"
+         tools:layout_editor_absoluteX="0dp">
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="172dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:hint="Card Number"
-                android:inputType="textPersonName" />
-
-        </TableRow>
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"></TableRow>
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"></TableRow>
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"></TableRow>
 
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:hint="Expiration"
-                android:inputType="textPersonName" />
+             <EditText
+                 android:id="@+id/editText3"
+                 android:layout_width="100dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginBottom="8dp"
+                 android:layout_marginEnd="8dp"
+                 android:layout_marginStart="32dp"
+                 android:layout_marginTop="8dp"
+                 android:ems="10"
+                 android:hint="Expiration"
+                 android:inputType="textPersonName" />
 
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:hint="CVC"
-                android:inputType="textPersonName" />
+             <EditText
+                 android:id="@+id/editText3"
+                 android:layout_width="60dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginBottom="8dp"
+                 android:layout_marginEnd="8dp"
+                 android:layout_marginStart="32dp"
+                 android:layout_marginTop="8dp"
+                 android:ems="10"
+                 android:hint="CVC"
+                 android:inputType="textPersonName" />
 
-        </TableRow>
+         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/farmerRequestPickupEnterAnotherPaymentAddCardButton"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:text="Add Card"
-                android:textAlignment="viewStart"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-                tools:layout_editor_absoluteX="15dp" />
-        </TableRow>
+             <EditText
+                 android:id="@+id/editText3"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginBottom="8dp"
+                 android:layout_marginEnd="8dp"
+                 android:layout_marginStart="32dp"
+                 android:layout_marginTop="8dp"
+                 android:ems="10"
+                 android:hint="Card Number"
+                 android:inputType="textPersonName" />
+
+         </TableRow>
+
+
+         <TableRow
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+             <Button
+                 android:id="@+id/farmerRequestPickupEnterAnotherPaymentAddCardButton"
+                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                 android:layout_width="200dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="32dp"
+                 android:text="Add Card"
+                 android:textAlignment="viewStart"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+                 tools:layout_editor_absoluteX="15dp" />
+         </TableRow>
     </TableLayout>
+         -->
+
+
+    <RadioGroup
+        android:id="@+id/radioGroup2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26">
+
+        <RadioButton
+            android:id="@+id/cashRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_weight="1"
+            android:text="Cash (not recommended)" />
+
+        <RadioButton
+            android:id="@+id/bankAccountRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_weight="1"
+            android:text="Bank Account" />
+
+        <RadioButton
+            android:id="@+id/creditCardRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_weight="1"
+            android:text="Credit Card" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="308dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:text="What payment method will you be using?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
