--- a/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
@@ -114,8 +114,10 @@
         android:id="@+id/listview"
         android:layout_width="321dp"
         android:layout_height="177dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
