--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_dropoff_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_dropoff_location.xml
@@ -64,4 +64,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toStartOf="@+id/editText7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/house" />
+
 </android.support.constraint.ConstraintLayout>
