--- a/app/src/main/res/layout/activity_sign_up_set_location.xml
+++ b/app/src/main/res/layout/activity_sign_up_set_location.xml
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"></Button>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/addressline1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signUpSetLocationEnterAddressButton" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/country"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText5" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/addressline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/postalcode"
         android:layout_width="124dp"
         android:layout_height="43dp"
         android:layout_marginEnd="80dp"
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/city"
         android:layout_width="76dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
